--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ rvm:
   - 2.1.5
 cache: bundler
 
-before_install: "bundle exec rake"
+before_install: 
+  - gem update --system
+  - gem --version
+  - bundle exec rake
