Update .travis.yml file to update database file in the test environment

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ before_install:
   - gem update --system
   - gem --version
   - bundle install
+  - bundle exec rake db:migrate RAILS_ENV=test
   - bundle exec rake
