--- a/config/database.yml
+++ b/config/database.yml
@@ -13,6 +13,14 @@ development:
   <<: *default
   database: db/development.sqlite3
 
+
+# development:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: workdey_development
+#   pool: 5
+#   username:
+#   password:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
@@ -20,6 +28,23 @@ test:
   <<: *default
   database: db/test.sqlite3
 
+# test:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: workdey_test
+#   pool: 5
+#   username:
+#   password:
+
 production:
   <<: *default
   database: db/production.sqlite3
+
+# production:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: workdey_production
+#   pool: 5
+#   username:
+#   password:
+
