--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,20 @@ rvm:
   - 2.1.5
 cache: bundler
 
-before_install: 
+before_install:
   - gem update --system
   - gem --version
   - bundle install
   - bundle exec rake db:migrate RAILS_ENV=test
   - bundle exec rake
+
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - wget http://selenium.googlecode.com/files/selenium-server-standalone-2.31.0.jar
+  - java -jar selenium-server-standalone-2.31.0.jar
+script:
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare
+  - rake spec:features
+bundler_args: --binstubs=./bundler_stubs
