Implement the profile settings page on dashboard
 Why:
   Users have no profile settings page on the app
   This change addresses the need by:
   Creating a profile settings page
   Creating a profile update page.
   Creating a PORO for profile update and an action in the dashboard controller.
   Keeping all images on cloudinary.
   Adding feature test to the profile update branch.
[Finished #107901600]

--- a/config/application.yml
+++ b/config/application.yml
@@ -2,3 +2,4 @@ GOOGLE_MAIL: "workdeycomet@gmail.com"
 GOOGLE_PASSWORD: "s1mulat1ons1n@nd3l@"
 
 DB_PASSWORD: "dbenginE"
+RAILS_SERVE_STATIC_FILES: "true"
