--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,10 @@ AllCops:
   Exclude:
     - "vendor/**/*"
     - "db/schema.rb"
+    - "Gemfile"
+    - "config/**/*"
+    - "spec/rails_helper.rb"
+    - "spec/spec_helper.rb"
   UseCache: false
 Style/CollectionMethods:
   Description: Preferred collection methods.
