--- a/config/database.yml
+++ b/config/database.yml
@@ -5,46 +5,43 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: 5
   timeout: 5000
-
-development:
-  <<: *default
-  database: db/development.sqlite3
-
+  username: "i-kode"
+  password: "andela"
 
 # development:
-#   adapter: postgresql
-#   encoding: unicode
-#   database: workdey_development
-#   pool: 5
-#   username:
-#   password:
+#   <<: *default
+#   database: db/development.sqlite3
+
+
+development:
+  adapter: postgresql
+  encoding: unicode
+  database: workdey_development
+  pool: 5
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
-
 # test:
-#   adapter: postgresql
-#   encoding: unicode
-#   database: workdey_test
-#   pool: 5
-#   username:
-#   password:
+#   <<: *default
+#   database: db/test.sqlite3
 
-production:
-  <<: *default
-  database: db/production.sqlite3
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: workdey_test
+  pool: 5
 
 # production:
-#   adapter: postgresql
-#   encoding: unicode
-#   database: workdey_production
-#   pool: 5
-#   username:
-#   password:
+#   <<: *default
+#   database: db/production.sqlite3
+
+production:
+  adapter: postgresql
+  encoding: unicode
+  database: workdey_production
+  pool: 5
 
