--- a/config/database.yml
+++ b/config/database.yml
@@ -5,11 +5,12 @@
 #   gem 'sqlite3'
 #
 default: &default
+  host: localhost
   adapter: postgresql
   pool: 5
   timeout: 5000
-  username:
-  password:
+  username: postgres
+  password: andela
 
 # development:
 #   <<: *default
