--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 
 # Ignore bundler config.
 /.bundle
-
+.coveralls.yml
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
@@ -18,7 +18,8 @@
 
 # Ignore application configuration
 /config/application.yml
-
+/coverage
+"*.json"
 dump.rdb
 UI_tabernacle.txt
 index.html
