--- a/config/database.yml
+++ b/config/database.yml
@@ -34,6 +34,8 @@ test:
   encoding: unicode
   database: workdey_test
   pool: 5
+  host: localhost
+  port: 5432
 
 # production:
 #   <<: *default
