--- a/.gitignore
+++ b/.gitignore
@@ -10,15 +10,15 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
-
+*.json
 # Ignore all logfiles and tempfiles.
 /log/*
 !/log/.keep
 /tmp
-
+*.json.lock
 # Ignore application configuration
 /config/application.yml
-/coverage
+/coverage/*
 "*.json"
 dump.rdb
 UI_tabernacle.txt
