--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,11 @@
 # Ignore application configuration
 /config/application.yml
 
+#Ignore os specific files
+*.DS_Store
+/coverage/
+
 dump.rdb
 UI_tabernacle.txt
 index.html
 .idea/
-coverage/
