chore (deployment): add staging seed data
Add post-deploy command to add seed data to the staging site.

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name":"workdey",
   "description":"",
   "scripts":{
-    "postdeploy":"bundle exec rake db:migrate"
+    "postdeploy":"bundle exec rake db:migrate && bundle exec rake db:seed"
   },
   "env":{
     "LANG":{
