--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -22,3 +22,4 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  stripe_publishable_key: pk_test_28YqniZIIgGBqP4laQE7iISh
