--- a/circle.yml
+++ b/circle.yml
@@ -6,3 +6,6 @@ deployment:
 machine:
   ruby:
     version: 2.3.0
+dependencies:
+  pre:
+    - sudo apt-get update; sudo apt-get install firefox=39.0.3+build2-0ubuntu0.12.04.1
