--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name":"workdey",
   "description":"",
   "scripts":{
-    "postdeploy":"bundle exec rake websocket_rails:start_server && bundle exec rake db:migrate && bundle exec rake db:seed"
+    "postdeploy":"bower install && bundle exec rake websocket_rails:start_server && bundle exec rake db:migrate && bundle exec rake db:seed"
   },
   "env":{
     "LANG":{
