fix (style): fix rubocop false string literal comment error

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -235,3 +235,5 @@ Lint/LiteralInCondition:
 Lint/LiteralInInterpolation:
   Description: Checks for literals used in interpolation.
   Enabled: false
+Style/FrozenStringLiteralComment:
+  Enabled: false
