--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - bundle exec rake
 
 before_script:
-  - "psql -c 'create database shotn_test;' -U postgres",
+  - psql -c 'create database workdey_test;' -U postgres
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - wget http://selenium.googlecode.com/files/selenium-server-standalone-2.31.0.jar
