--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
   - psql -c 'create database workdey_test;' -U postgres
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - wget http://selenium.googlecode.com/files/selenium-server-standalone-2.31.0.jar
+  - wget http://selenium-release.storage.googleapis.com/2.43/selenium-server-standalone-2.43.1.jar
   - java -jar selenium-server-standalone-2.31.0.jar
 script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
