--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - wget http://selenium-release.storage.googleapis.com/2.43/selenium-server-standalone-2.43.1.jar
-  - java -jar selenium-server-standalone-2.31.0.jar
+  - java -jar selenium-server-standalone-2.43.1.jar
 script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
   - bundle exec rake db:test:prepare
-  - rake spec:features
+  - rake spec
 bundler_args: --binstubs=./bundler_stubs
