--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: ruby
 rvm:
   - 2.3.0
 cache: bundler
-
+addons:
+  firefox: "45.0"
 before_install:
   - gem update --system
   - gem --version
